--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -78,7 +78,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Sorry about the downtime today! Update #20 including the "Item Pricer" is now live, <a href="http://d3up.com/update/21">read all about it here</a>. As always, please submit feedback/bugs/suggestions/anything via email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+					<b>System Message</b>: Here's a sneak peak on the <a href="http://www.facebook.com/photo.php?fbid=168456403279226&set=a.168456399945893.13724.167818373343029&type=1">FB page showing off D3Up's upcoming feature</a>. Update #20 including the "Item Pricer" is now live, <a href="http://d3up.com/update/21">read all about it here</a>. As always, please submit feedback/bugs/suggestions/anything via email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 				</div>
 			</div>
 		</div>
