--- a/application/views/scripts/item/pricer.phtml
+++ b/application/views/scripts/item/pricer.phtml
@@ -12,14 +12,14 @@
 			    <option value="belt" label="Belt">Belt</option>
 			    <option value="boots" label="Boots">Boots</option>
 			    <option value="bracers" label="Bracers">Bracers</option>
-			    <option value="chest-armor" label="Chest Armor">Chest Armor</option>
+			    <option value="chest" label="Chest Armor">Chest Armor</option>
 			    <option value="cloak" label="Cloak">Cloak</option>
 			    <option value="gloves" label="Gloves">Gloves</option>
 			    <option value="helm" label="Helm">Helm</option>
 			    <option value="pants" label="Pants">Pants</option>
 			    <option value="mighty-belt" label="Mighty Belt">Mighty Belt</option>
 			    <option value="ring" label="Ring">Ring</option>
-			    <option value="shoulder" label="Shoulder">Shoulder</option>
+			    <option value="shoulders" label="Shoulders">Shoulders</option>
 			    <option value="spirit-stone" label="Spirit Stone">Spirit Stone</option>
 			    <option value="voodoo-mask" label="Voodoo Mask">Voodoo Mask</option>
 			    <option value="wizard-hat" label="Wizard Hat">Wizard Hat</option>
