--- a/application/views/scripts/item/index.phtml
+++ b/application/views/scripts/item/index.phtml
@@ -46,14 +46,14 @@
 		    <option label="Belt" value="belt">Belt</option>
 		    <option label="Boots" value="boots">Boots</option>
 		    <option label="Bracers" value="bracers">Bracers</option>
-		    <option label="Chest Armor" value="chest-armor">Chest Armor</option>
+		    <option label="Chest Armor" value="chest">Chest Armor</option>
 		    <option label="Cloak" value="cloak">Cloak</option>
 		    <option label="Gloves" value="gloves">Gloves</option>
 		    <option label="Helm" value="helm">Helm</option>
 		    <option label="Pants" value="pants">Pants</option>
 		    <option label="Mighty Belt" value="mighty-belt">Mighty Belt</option>
 		    <option label="Ring" value="ring">Ring</option>
-		    <option label="Shoulder" value="shoulder">Shoulder</option>
+		    <option label="Shoulders" value="shoulders">Shoulders</option>
 		    <option label="Spirit Stone" value="spirit-stone">Spirit Stone</option>
 		    <option label="Voodoo Mask" value="voodoo-mask">Voodoo Mask</option>
 		    <option label="Wizard Hat" value="wizard-hat">Wizard Hat</option>
