--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -102,6 +102,14 @@
 	<script src="//static.getclicky.com/js" type="text/javascript"></script>
 	<script type="text/javascript">try{ clicky.init(66607061); }catch(e){}</script>
 	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66607061ns.gif" /></p></noscript>
+	<script type="text/javascript">
+	  var uvOptions = {};
+	  (function() {
+	    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+	    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/G6QjQp0wBZ9P7m0db4HQ.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+	  })();
+	</script>
 	<div class="d3up-tooltip"></div>
 </body>
 </html>
