--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -78,7 +78,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Huge update today, <a href="/update/22">Skill-based DPS Calculations are in</a> (<- That link works now, sorry). Submit feedback via email or the new feedback thing on the right side of the page. As always, please submit feedback/bugs/suggestions/anything via email to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+					<b>System Message</b>: Since Blizzard now released their Character Profiles, I decided to setup an import for it to pull in your gear. <a href="http://d3up.com/update/23">Read all about it on this update</a>. It's still extremely experimental and may contain bugs! Let me know how it works for you in the feedback tab or as a <a href="http://d3up.com/update/23">comment on this update</a>.
 				</div>
 			</div>
 		</div>
